<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/awal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mulai"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                tools:src="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/gambar"
                android:layout_toRightOf="@id/gambar"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/judul" />

            <TextView
                android:id="@+id/tv_ikhtisar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nama"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/gambar"
                android:layout_toRightOf="@id/gambar"
                android:maxLines="5"
                android:textSize="12sp"
                tools:text="@string/deskripsi" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@+id/gambar"
                android:drawableLeft="@drawable/tanggal"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="12sp"
                tools:text="@string/tanggal"
                android:drawableStart="@drawable/tanggal"
                android:layout_toEndOf="@+id/gambar"
                android:layout_marginStart="@dimen/activity_vertical_margin" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btn_disuka"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/disuka"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/favorite"
                android:textSize="14sp"
                android:drawableLeft="@drawable/disuka"
                android:layout_marginStart="-10dp" />

            <Button
                android:id="@+id/btn_disebar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginRight="-10dp"
                android:textSize="14sp"
                android:drawableStart="@drawable/sebar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/share"
                android:layout_weight="1"
                android:drawableLeft="@drawable/sebar"
                android:layout_marginEnd="-10dp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>